--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name" : "xptrdev/wp-config-file-editor",
 	"autoload" : {
-		"classmap" : [ "Config/", "Modules/", "Services/", "Factory/", "Libraries/", "Pluggable/", "SysPlugins/" ]
+		"classmap" : [ "Config/", "Modules/", "Services/", "Factory/", "Libraries/", "Pluggable/", "SysPlugins/", "Installer/" ]
 	},
   "repositories": [{
     "type": "vcs",
