Strong Structure changes. Profiles Module has been moved to Editor Module. The complement will be on the subsequence commits

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name" : "xptrdev/wp-config-file-editor",
 	"autoload" : {
-		"classmap" : ["Compatibility/", "Config/", "Includes/", "Modules/", "Services/", "Factory/", "Libraries/", "Pluggable/", "SysPlugins/", "Installer/" ]
+		"classmap" : [""]
 	},
   "repositories": [{
     "type": "vcs",
